Fixed item title and content too long

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,26 @@ body {
   font-size: 32px;
 }
 
+.scrollable {
+  max-height: 400px;
+}
+/* css scrollable inspired from: https://codepen.io/devstreak/pen/dMYgeO */
+.scrollable::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+}
+
+.scrollable::-webkit-scrollbar {
+  width: 5px;
+  background-color: transparent;
+}
+
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: #5a5a5a;
+  border: 2px solid #555555;
+}
+
 /* responsive */
 @media (min-width: 576px) {
   .login-card {
